[gd_scene load_steps=6 format=3 uid="uid://bu7y66mvjuxgy"]

[ext_resource type="Script" uid="uid://dtridsiu4crki" path="res://scripts/tornado_blast.gd" id="1_jltvt"]
[ext_resource type="Material" uid="uid://caxu4fl34w6y0" path="res://scenes/firework_bloom_particle.tres" id="3_qn6su"]
[ext_resource type="Material" uid="uid://wljyysfa5c2p" path="res://materials/ring_shader.tres" id="4_p334b"]
[ext_resource type="AudioStream" uid="uid://cy5xqsxo1wwtm" path="res://assets/sounds/Firework_echo.mp3" id="5_d1yy5"]

[sub_resource type="QuadMesh" id="QuadMesh_gh5g0"]
material = ExtResource("3_qn6su")
size = Vector2(0.02, 0.1)

[node name="TornadoBlast" type="Node3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
script = ExtResource("1_jltvt")

[node name="RingParticles1" type="GPUParticles3D" parent="."]
transform = Transform3D(55, 0, 0, 0, 1, 0, 0, 0, 55, 0, 12.5, 0)
emitting = false
amount = 150
lifetime = 200.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = ExtResource("4_p334b")
draw_pass_1 = SubResource("QuadMesh_gh5g0")

[node name="RingParticles2" type="GPUParticles3D" parent="."]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 10, 0)
emitting = false
amount = 150
lifetime = 200.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = ExtResource("4_p334b")
draw_pass_1 = SubResource("QuadMesh_gh5g0")

[node name="RingParticles3" type="GPUParticles3D" parent="."]
transform = Transform3D(45, 0, 0, 0, 1, 0, 0, 0, 45, 0, 7, 0)
emitting = false
amount = 150
lifetime = 200.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = ExtResource("4_p334b")
draw_pass_1 = SubResource("QuadMesh_gh5g0")

[node name="RingParticles4" type="GPUParticles3D" parent="."]
transform = Transform3D(40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 4, 0)
emitting = false
amount = 150
lifetime = 200.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = ExtResource("4_p334b")
draw_pass_1 = SubResource("QuadMesh_gh5g0")

[node name="RingParticles5" type="GPUParticles3D" parent="."]
transform = Transform3D(35, 0, 0, 0, 1, 0, 0, 0, 35, 0, 0, 0)
emitting = false
amount = 150
lifetime = 200.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = ExtResource("4_p334b")
draw_pass_1 = SubResource("QuadMesh_gh5g0")

[node name="RingParticles6" type="GPUParticles3D" parent="."]
transform = Transform3D(30, 0, 0, 0, 1, 0, 0, 0, 30, 0, -3, 0)
emitting = false
amount = 150
lifetime = 200.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
process_material = ExtResource("4_p334b")
draw_pass_1 = SubResource("QuadMesh_gh5g0")

[node name="BlastTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="FireworkBlast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_d1yy5")
volume_db = -19.422
